# cw_6

./: pyproject.toml  requirements.txt
skymarket/ads/: filters.py  models.py  serializers.py  urls.py  views.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  serializers.py
