[tool.poetry]
name = "cww-6"
version = "0.1.0"
description = ""
authors = ["Женя <mr.holistr@mail.ru>"]
readme = "README.md"
packages = [{include = "cww_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
pillow = "^9.3.0"
psycopg2 = "^2.9.5"
cffi = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
